<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2026 The BlissRoms Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/incall_button_sheet"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:paddingBottom="@dimen/incall_button_vertical_padding"
  tools:showIn="@layout/frag_incall_voice">

    <View
      android:id="@+id/incall_button_sheet_handle"
      android:layout_width="@dimen/incall_sheet_handle_width"
      android:layout_height="@dimen/incall_sheet_handle_height"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/incall_sheet_handle_margin"
      android:layout_marginBottom="@dimen/incall_sheet_handle_margin"
      android:background="@drawable/incall_sheet_handle"
      android:contentDescription="@string/incall_sheet_show_more"/>

    <LinearLayout
      android:id="@+id/incall_button_row_one"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_first_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_mute"
        tools:layout_height="@dimen/tools_button_height"/>

      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_second_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_dialpad"
        tools:layout_height="@dimen/tools_button_height"/>

      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_third_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_speaker"
        tools:layout_height="@dimen/tools_button_height"/>

      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_more_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        app:incall_icon="@drawable/quantum_ic_more_vert_vd_theme_24"
        app:incall_labelText="@string/incall_label_more"
        tools:layout_height="@dimen/tools_button_height"/>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/incall_button_row_two"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/incall_button_vertical_padding"
      android:orientation="horizontal"
      android:visibility="gone">

      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_fourth_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_add_call"
        tools:layout_height="@dimen/tools_button_height"/>

      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_fifth_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_hold"
        tools:layout_height="@dimen/tools_button_height"/>

      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_sixth_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_videocall"
        tools:layout_height="@dimen/tools_button_height"/>

      <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
